# arcana

./: .gitignore  README.md
arcana/: autoreload.py  cli.py  core.py  defaults.toml  extractor.py  format_helper.py  management.py  page_maker.py  pyproject.toml  settings.py  templater.py
arcana/arcana/: __main__.py  autoreload.py  cli.py  core.py  extractor.py  management.py  page_maker.py  server.py  settings.py  templater.py
arcana/arcana/commands/: autoreload.py  build.py  new.py  rebuild.py  serve.py  test.py
arcana/commands/: new.py  serve.py
arcana/docs/: Arcana.md
static/: d20.js  styles.css  theme.js
templates/: base.html  navbar.html
